# thusly

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_playground.sh  netlify.toml
.github/: pull_request_template.md
design/: grammar.txt
design/implementation/: README.md  bytecode-ISA.md  bytecode.md  grammar.txt  parser-compiler.md  tokenizer.md  vm.md
design/snippets/: snippets.md
grammar/: grammar.txt
playground/: README.md  build_playground.sh  index.html  install_emcc_and_build_playground.sh
playground/src/: editor_setup.js  main_wasm.c  playground.html  playground.js  snippets.js  styles.css  styles.module.css  wasm_setup.js
src/: common.h  compiler.c  compiler.h  debug.c  debug.h  exit_code.h  gc_object.c  gc_object.h  main.c  memory.c  memory.h  object.c  object.h  program.c  program.h  table.c  table.h  thusly_value.c  thusly_value.h  tokenizer.c  tokenizer.h  vm.c  vm.h
